# vesagent

./: README.md
src/: CMakeLists.txt  Makefile
src/cmake/: xencodeConfig.cmake  xlogConfig.cmake  xtransportConfig.cmake
src/lib/: CMakeLists.txt
src/lib/common/: XLog.h
src/lib/encode/: XBatchImp.cpp  XCodecsInUseImp.cpp  XCommonEventHeaderImp.cpp  XCounterImp.cpp  XCpuUsageImp.cpp  XDiskUsageImp.cpp  XEndOfCallVqmSummariesImp.cpp  XFaultFieldsImp.cpp  XFilesystemUsageImp.cpp  XGtpPerFlowMetricsImp.cpp  XHeartbeatFieldsImp.cpp  XHugePagesImp.cpp  XIpmiBaseboardTemperatureImp.cpp  XIpmiBaseboardVoltageRegulatorImp.cpp  XIpmiBatteryImp.cpp  XIpmiFanImp.cpp  XIpmiGlobalAggregateTemperatureMarginImp.cpp  XIpmiHsbpImp.cpp  XIpmiImp.cpp  XIpmiNicImp.cpp  XIpmiPowerSupplyImp.cpp  XIpmiProcessorImp.cpp  XJsonObject.cpp  XJsonObjectImp.cpp  XJsonObjectInstanceImp.cpp  XKeyImp.cpp  XLatencyBucketMeasureImp.cpp  XLoadImp.cpp  XMachineCheckExceptionImp.cpp  XMeasurementFieldsImp.cpp  XMemoryUsageImp.cpp  XMobileFlowFieldsImp.cpp  XNamedHashMapImp.cpp  XNicPerformanceImp.cpp  XNotificationFieldsImp.cpp  XOtherFieldsImp.cpp  XPnfRegistrationFieldsImp.cpp  XProcessStatsImp.cpp  XProcessorDimmAggregateThermalMarginImp.cpp  XSipSignalingFieldsImp.cpp  (+5 more)
src/lib/encode/include/: XCommonEventHeader.h
src/lib/transport/: XBufferedTransport.cpp  XBufferedTransport.h  XDiskQueue.cpp  XDiskQueue.h  XLibcurlTransport.cpp  XLibcurlTransport.h  XMemQueue.cpp  XMemQueue.h  XRetryTransport.cpp  XRetryTransport.h  XRpcClientTransport.cpp  XRpcClientTransport.h  XRpcServertTransport.cpp  XRpcServertTransport.h  XSwitchableTransport.cpp  XSwitchableTransport.h  XSynchronizedTransport.cpp  XSynchronizedTransport.h  XTransport.cpp  rpc.idl
src/lib/transport/gen-cpp/: XRpcTransport.cpp  XRpcTransport.h  rpc_types.cpp  rpc_types.h
src/lib/transport/include/: XQueue.h  XTransport.h
src/sample/: CMakeLists.txt  EventSamples.cpp  TransportSamples.cpp  main.cpp
src/test/: CMakeLists.txt  EventSamples.h  TransportSamples.cpp  main.cpp
